# TheOracle

./: .dockerignore  .gitignore  .mcp.json  CITATION.cff  Cargo.toml  Dockerfile  LICENSE  LICENSING.md  Makefile  README.md  pyproject.toml  reproduce.sh
crates/context-graph-cli/: Cargo.toml
crates/context-graph-cli/benches/: cli_benchmarks.rs
crates/context-graph-cli/src/: error.rs  governed_edit.rs  lib.rs  main.rs  mcp_client.rs  mcp_helpers.rs
crates/context-graph-cli/tests/: export_training_integration.rs  learning_jsonl_export_integration.rs
crates/context-graph-core/: Cargo.toml
crates/context-graph-core/src/: learner_training.rs  lib.rs  monitoring.rs
crates/context-graph-core/tests/: file_watcher_integration.rs  injection_manual_test.rs  rrf_edge_cases.rs  source_metadata_integration.rs  synthesizer_edge_case_test.rs
crates/context-graph-cuda/: Cargo.toml  build.rs
crates/context-graph-cuda/kernels/: hdc.cu  knn.cu
crates/context-graph-cuda/src/: error.rs  lib.rs  ops.rs  similarity.rs  stub.rs
crates/context-graph-cuda/tests/: native_cubin_smoke.rs
crates/context-graph-dynamicjepa/: Cargo.toml
crates/context-graph-dynamicjepa/src/: artifact.rs  config.rs  lib.rs  mi_audit.rs  service.rs  transfer.rs
crates/context-graph-dynamicjepa/tests/: cuda_smoke.rs
crates/context-graph-mcp/: Cargo.toml
crates/context-graph-mcp/src/: daemon.rs  daemon_validate.rs  deprecation.rs  health_probe.rs  lib.rs  main.rs  monitoring.rs  protocol.rs  weights.rs
crates/context-graph-mcp/tests/: cli_args.rs  graph_linking_integration.rs  toolchain_startup_gate.rs
crates/context-graph-mejepa/: Cargo.toml
crates/context-graph-mejepa-corpus/: Cargo.toml
crates/context-graph-mejepa-corpus/examples/: inspect_corpus_store.rs
crates/context-graph-mejepa-corpus/src/: compile_error.rs  delete_test_call.rs  generate.rs  generic_language_ops.rs  known_good.rs  lib.rs  multilang_fixture_corpus.rs  off_by_one.rs  oracle.rs  over_engineer.rs  patch_mutation.rs  prng.rs  python_lex.rs  source_patch.rs  source_patch_support.rs  split.rs  split_tests.rs  subtle_flip.rs  swap_variable.rs  swebench.rs  tests.rs  timed_subprocess.rs  util.rs  wrong_file.rs
crates/context-graph-mejepa-corpus/tests/: source_prep_timeout_test.rs
crates/context-graph-mejepa-embedders/: Cargo.toml
crates/context-graph-mejepa-embedders/examples/: materialize_models_config.rs  python_forward_cache_readback.rs
crates/context-graph-mejepa-embedders/src/: cache.rs  cache_entry.rs  cache_io.rs  cache_limits.rs  cache_tests.rs  calibration.rs  config.rs  diagnostics.rs  digest.rs  dynamic_registry.rs  embedder_id.rs  ensemble.rs  error.rs  forward.rs  lib.rs  routing.rs  types.rs  vram.rs
crates/context-graph-mejepa-hygiene/: Cargo.toml
crates/context-graph-mejepa-hygiene/src/: categories.rs  entry.rs  error.rs  gc.rs  lib.rs  mcp.rs  ops.rs  quota.rs  quota_types.rs  reports.rs  retention.rs  storage.rs  tier.rs  tier_frozen.rs  tier_ops.rs  witness_compress.rs
crates/context-graph-mejepa-hygiene/tests/: flywheel_cfs_registered_test.rs
crates/context-graph-mejepa-instruments/: Cargo.toml
crates/context-graph-mejepa-instruments/assets/: q4_security_semgrep_python.yml
crates/context-graph-mejepa-instruments/examples/: panel_graph_store_readback.rs
crates/context-graph-mejepa-instruments/src/: e_code.rs  e_oracle.rs  e_reasoning.rs  e_runtime.rs  e_scalars.rs  e_static_analysis.rs  e_text.rs  e_trace.rs  e_witness.rs  features.rs  frozen_hook.rs  lib.rs  materialize.rs  panel_b.rs  panel_graph.rs  panel_json.rs  panel_store.rs  q4_accuracy_labels.rs  q4_accuracy_labels_parse.rs  q4_accuracy_labels_store.rs  q4_accuracy_labels_support.rs  q4_accuracy_labels_tests.rs  q4_confidence_calibration.rs  q4_confidence_calibration_tests.rs  q4_cost_labels.rs  q4_cost_labels_parse.rs  q4_cost_labels_store.rs  q4_cost_labels_support.rs  q4_cost_labels_tests.rs  q4_pass_annotations.rs  q4_pass_annotations_tests.rs  q4_perf_labels.rs  q4_perf_labels_parse.rs  q4_perf_labels_store.rs  q4_perf_labels_support.rs  q4_perf_labels_tests.rs  q4_reasoning_labels.rs  q4_reasoning_labels_store.rs  q4_reasoning_labels_tests.rs  q4_security_labels.rs  (+1 more)
crates/context-graph-mejepa-shift-subscriber/: Cargo.toml
crates/context-graph-mejepa-shift-subscriber/src/: cache.rs  error.rs  lib.rs  models.rs  runner.rs  shift_transform.rs  status.rs  subscriber.rs  tail.rs  watermark.rs
crates/context-graph-mejepa-tct/: Cargo.toml
crates/context-graph-mejepa-tct/src/: builder.rs  calibrator.rs  constellation.rs  error.rs  freshness.rs  freshness_policy.rs  gtau.rs  guard_audit.rs  hinge.rs  hinge_types.rs  inspect.rs  lib.rs  panel_slots.rs  rate.rs  rate_aggregator.rs  refresh_report.rs  shrinkage.rs  shrinkage_engine.rs  store.rs  tests.rs  types.rs  verdict.rs
crates/context-graph-mejepa-train/: Cargo.toml
crates/context-graph-mejepa-train/src/: ability_resolver.rs  ability_resolver_refutation.rs  ability_resolver_storage.rs  ability_resolver_tests.rs  ability_resolver_types.rs  active_constellation.rs  checkpoint.rs  chunk_skill_membership.rs  chunk_skill_membership_tests.rs  compression_progress.rs  config.rs  dda.rs  error.rs  failure_mode_hierarchy.rs  label_bridge.rs  labels.rs  learning_signal.rs  lib.rs  live_skill_reverse_index.rs  mistake_log.rs  online_head_state.rs  online_head_state_keys.rs  online_head_state_support.rs  replay_buffer.rs  skill_corpus_materialization.rs  skill_linkage.rs  skill_linkage_audit.rs  skill_linkage_graph.rs  skill_linkage_source.rs  skill_linkage_storage.rs  skill_linkage_tests.rs  skill_sequence_discovery.rs  skill_sequence_discovery_tests.rs  skill_sequence_types.rs  skill_validation.rs
crates/context-graph-mejepa/examples/: task_py_g_136_slot_preserving_ood_aggregation_readback.rs
crates/context-graph-mejepa/src/: adversarial_corpus.rs  (+85 more)
crates/context-graph-mincut/: Cargo.toml
crates/context-graph-storage/: Cargo.toml
crates/context-graph-test-utils/: Cargo.toml
crates/context-graph-tier-compression/: Cargo.toml
crates/context-graph-witness/: Cargo.toml
(+1232 files in other folders)
