[package]
name = "context-graph-cuda"
version = "0.1.0"
edition = "2021"
authors = ["Context Graph Team"]
description = "CUDA acceleration for Context Graph (RTX 5090 / Blackwell optimized)"
license = "PolyForm-Noncommercial-1.0.0"
repository = "https://github.com/contextgraph/contextgraph"
keywords = ["cuda", "gpu", "neural", "context-graph"]

[dependencies]
context-graph-core = { path = "../context-graph-core" }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }

# Error handling
thiserror = { workspace = true }
async-trait = { workspace = true }

# Logging
tracing = { workspace = true }

# UUID for memory IDs
uuid = { workspace = true }

# Workspace Candle CUDA support is provided by candle-core/candle-nn 0.10.2
# at the workspace root. This crate owns the direct CUDA Driver API kernels.

[dev-dependencies]
tokio-test = "0.4"
# Enable test-utils for stubs access in tests (AP-007 compliant)
context-graph-core = { path = "../context-graph-core", features = ["test-utils"] }

[features]
default = ["cuda"]
cuda = []  # REQUIRED: RTX 5090 Blackwell CUDA 13.2 sm_120a support
# FAISS GPU support - requires FAISS rebuilt with CUDA 13.2+ and sm_120 support.
# Enable this ONLY after running: scripts/rebuild_faiss_gpu.sh
# This feature links against libfaiss_c.so and enables GPU vector indexing.
faiss-working = ["cuda"]

[build-dependencies]
# Future: cc = "1.0"
# Future: bindgen = "0.69"
