[package]
name = "context-graph-mcp"
version = "0.1.0"
edition = "2021"
authors = ["Context Graph Team"]
description = "MCP JSON-RPC server for Context Graph"
license = "PolyForm-Noncommercial-1.0.0"
repository = "https://github.com/contextgraph/contextgraph"
keywords = ["mcp", "jsonrpc", "server", "context-graph"]

[lib]
name = "context_graph_mcp"
path = "src/lib.rs"

[[bin]]
name = "context-graph-mcp"
path = "src/main.rs"
test = false

[dependencies]
context-graph-core = { path = "../context-graph-core" }
context-graph-paths = { path = "../context-graph-paths" }
context-graph-cuda = { path = "../context-graph-cuda" }
context-graph-embeddings = { path = "../context-graph-embeddings" }
context-graph-storage = { path = "../context-graph-storage" }
context-graph-witness = { path = "../context-graph-witness" }
context-graph-solver = { path = "../context-graph-solver" }
context-graph-cli = { path = "../context-graph-cli", default-features = false }
context-graph-mejepa-embedders = { path = "../context-graph-mejepa-embedders" }
context-graph-mejepa = { path = "../context-graph-mejepa" }
context-graph-mejepa-cf = { path = "../context-graph-mejepa-cf" }
context-graph-mejepa-hygiene = { path = "../context-graph-mejepa-hygiene" }
context-graph-mejepa-instruments = { path = "../context-graph-mejepa-instruments" }
context-graph-mejepa-shift-subscriber = { path = "../context-graph-mejepa-shift-subscriber" }
context-graph-mejepa-tct = { path = "../context-graph-mejepa-tct" }
context-graph-mejepa-train = { path = "../context-graph-mejepa-train" }

# Async runtime
tokio = { workspace = true }
axum = "0.8"

# Serialization
serde = { workspace = true }
serde_json = "1.0"
bincode = { workspace = true }
jsonschema = { version = "0.18", features = ["draft202012"] }
toml = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = "1.0"
async-trait = { workspace = true }
futures-util = "0.3"

# Logging
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# UUID
uuid = { workspace = true }
dirs = "5"

# Synchronization
parking_lot = "0.12"
fs2 = "0.4"

# Time
chrono = { workspace = true }

# Hashing and encoding for content hashes
sha2 = "0.10"
sha3 = "0.10"
hmac = "0.12"
hex = "0.4"
rand = { workspace = true }
rand_distr = { workspace = true }

# Glob pattern matching for file watcher tools
glob = "0.3"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
rocksdb = "0.22"

# PID file flock guard (Unix only, prevents multi-process DB corruption)
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"
candle-core = { workspace = true }
# Enable test-utils for stubs access in tests (AP-007 compliant)
context-graph-core = { path = "../context-graph-core", features = ["test-utils"] }
[features]
# GPU-first architecture: CUDA is REQUIRED (RTX 5090 / Blackwell)
# No fallback stubs - system fails fast if CUDA unavailable
default = ["cuda"]
candle = ["context-graph-embeddings/candle"]
# Retired 2026-05-09: enabling this feature fails closed at compile time.
llm = []
cuda = ["context-graph-cuda/cuda", "context-graph-embeddings/cuda", "context-graph-storage/cuda", "candle"]
