[package]
name = "context-graph-mejepa-tct"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "ME-JEPA-Code Phase 4b teleological constellation training guard"
license.workspace = true

[dependencies]
bincode = { workspace = true }
chrono = { workspace = true }
context-graph-mejepa-embedders = { path = "../context-graph-mejepa-embedders" }
context-graph-mejepa-cf = { path = "../context-graph-mejepa-cf" }
context-graph-mejepa-instruments = { path = "../context-graph-mejepa-instruments" }
context-graph-paths = { workspace = true }
hex = "0.4"
rocksdb = "0.22"
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
context-graph-core = { path = "../context-graph-core" }
tempfile = "3.10"
