[package]
name = "context-graph-mejepa"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "ME-JEPA-Code Phase 2 predictor, frozen target, VICReg loss, and FSV harness"
license.workspace = true
default-run = "mejepa"

[dependencies]
candle-core = { workspace = true }
candle-nn = { workspace = true }
bincode = { workspace = true }
chrono = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
anyhow = { workspace = true }
async-trait = { workspace = true }
blake3 = "1.5"
context-graph-cuda = { path = "../context-graph-cuda" }
context-graph-core = { workspace = true }
context-graph-embeddings = { path = "../context-graph-embeddings" }
context-graph-paths = { path = "../context-graph-paths" }
context-graph-mejepa-embedders = { path = "../context-graph-mejepa-embedders" }
context-graph-mejepa-corpus = { path = "../context-graph-mejepa-corpus" }
context-graph-mincut = { path = "../context-graph-mincut" }
context-graph-mejepa-instruments = { path = "../context-graph-mejepa-instruments" }
context-graph-mejepa-tct = { path = "../context-graph-mejepa-tct" }
context-graph-mejepa-cf = { path = "../context-graph-mejepa-cf" }
context-graph-mejepa-hygiene = { path = "../context-graph-mejepa-hygiene" }
context-graph-solver = { path = "../context-graph-solver" }
context-graph-witness = { path = "../context-graph-witness" }
hex = "0.4"
rocksdb = "0.22"
ruff_python_ast = { package = "rustpython-ruff_python_ast", version = "0.15.8" }
ruff_python_parser = { package = "rustpython-ruff_python_parser", version = "0.15.8" }
ruff_text_size = { package = "rustpython-ruff_text_size", version = "0.15.8" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
tempfile = "3.10"
thiserror = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
usearch = "2"

[dev-dependencies]
context-graph-mejepa-shift-subscriber = { path = "../context-graph-mejepa-shift-subscriber" }
context-graph-mejepa-train = { path = "../context-graph-mejepa-train" }
# Used by tests/e2e/chaos_failpoints.rs for fault-injection via failpoints.
fail = { version = "0.5", features = ["failpoints"] }
tempfile = "3.10"

[[bin]]
name = "mejepa"
path = "src/bin/mejepa.rs"

[[bin]]
name = "mejepa-heal-drill"
path = "src/bin/mejepa-heal-drill.rs"
