[package]
name = "context-graph-tier-compression"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Clean-room 8/7/5/3-bit groupwise linear scalar quantization for tiered cold storage in ContextGraph"
license.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = "1.0"
